# JOB-MARKET-ANALYZER

./: .env.example  .gitignore  README.md  batch_eval.py  main.py  pyproject.toml  requirements.txt
src/: __init__.py  gui_app.py  main.py
src/gui/: __init__.py  main_window.py  results_window.py  styles.py
src/models/: __init__.py  analysis_result.py  job.py  learning_resource.py  resume.py  skill.py
src/services/: __init__.py  database_manager.py  job_fetcher.py  learning_path_generator.py  resume_parser.py  skill_analyzer.py  skill_extractor.py
src/utils/: __init__.py  chart_generator.py  file_validator.py
tests/: __init__.py
