[tool.poetry]
name = "job-market-analyzer"
version = "1.0.0"
description = "AI-powered career analysis tool"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
customtkinter = "^5.2.0"
pytesseract = "^0.3.10"
pdfplumber = "^0.10.3"
spacy = "^3.7.2"
scikit-learn = "^1.3.2"
requests = "^2.31.0"
plotly = "^5.18.0"